--- a/documentation/assets/css/website.css
+++ b/documentation/assets/css/website.css
@@ -30,7 +30,7 @@ a:visited {
 
 .primary,
 a.primary {
-  color: #F64E4D;
+  color: #f64e4d;
 }
 
 .arrow {
@@ -70,8 +70,8 @@ a:hover .arrow:before,
 }
 
 .inverted-section {
-  background-color: #F6F4F2;
-  color: #2E2C2C;
+  background-color: #f6f4f2;
+  color: #2e2c2c;
 }
 
 .grid-container {
@@ -143,7 +143,7 @@ a:hover .arrow:before,
 }
 
 a.main-cta {
-  color: #2E2C2C;
+  color: #2e2c2c;
   display: inline-flex;
   align-items: baseline;
   height: 32px;
@@ -151,7 +151,7 @@ a.main-cta {
   padding-right: 12px;
   border-radius: 16px;
   line-height: 2;
-  background-color: #F64E4D;
+  background-color: #f64e4d;
   transition: transform .25s ease;
 }
 
@@ -256,7 +256,7 @@ a.main-cta:hover {
   height: 40px;
   margin: -20px 0 0 -20px;
   background-color: currentColor;
-  transform: translate3d(0,0,0);
+  transform: translate3d(0, 0, 0);
 }
 
 .logo-animation .logo-letter svg {
@@ -368,7 +368,7 @@ a.main-cta:hover {
 
 .feature-title {
   font-size: 40px;
-  line-height: 1;
+  line-height: 1.5;
   letter-spacing: -.025em;
 }
 
@@ -398,7 +398,7 @@ a.main-cta:hover {
     font-size: 64px;
   }
   .feature-subtitle {
-    font-size: 32px;
+    font-size: 24px;
   }
   .feature-title:not(:last-child) {
     margin-bottom: 8px;
@@ -548,7 +548,12 @@ a.feature-icon:hover img {
   width: 10px;
   height: 10px;
   margin: 0;
-  background-image: linear-gradient(180deg, #373734 0%, #242423 52%, #0D0D0C 100%);
+  background-image: linear-gradient(
+    180deg,
+    #373734 0%,
+    #242423 52%,
+    #0d0d0c 100%
+  );
   transform: scale(0);
   transform-origin: 50% 50%;
 }
@@ -610,7 +615,7 @@ a.feature-icon:hover img {
 @media (min-width: 740px) {
   .stagger-visualizer .dot {
     background-color: transparent;
-    background-image: linear-gradient(180deg, #FFFFFF 8%, #D3CDC6 100%);
+    background-image: linear-gradient(180deg, #ffffff 8%, #d3cdc6 100%);
   }
 }
 
@@ -667,11 +672,11 @@ a.feature-icon:hover img {
   background-color: currentColor;
 }
 
-.time-control .line:nth-child(9n+2) {
+.time-control .line:nth-child(9n + 2) {
   height: 20px;
 }
 
-.time-control .line:nth-child(90n+2) {
+.time-control .line:nth-child(90n + 2) {
   height: 32px;
 }
 
@@ -686,7 +691,7 @@ a.feature-icon:hover img {
   left: -22px;
   width: 48px;
   height: 48px;
-  background-image: linear-gradient(-180deg, #FFFFFF 3%, #DBD6D0 100%);
+  background-image: linear-gradient(-180deg, #ffffff 3%, #dbd6d0 100%);
   border-radius: 50%;
   cursor: grab;
 }
@@ -718,7 +723,7 @@ a.feature-icon:hover img {
   display: block;
   width: 1px;
   height: 250px;
-  background-color: #F64E4D;
+  background-color: #f64e4d;
 }
 
 .timeline {
@@ -780,11 +785,11 @@ a.feature-icon:hover img {
   width: 66px;
 }
 .animation-change {
-  background-image: linear-gradient(-180deg, #FFFFFF 3%, #DBD6D0 100%);
+  background-image: linear-gradient(-180deg, #ffffff 3%, #dbd6d0 100%);
   width: 207px;
 }
 .animation-end-delay {
-  background-color: #F64E4D;
+  background-color: #f64e4d;
   width: 66px;
 }
 
@@ -804,9 +809,13 @@ a.feature-icon:hover img {
   margin-right: 2px;
 }
 
-.info + .info { margin-left: -3px; }
+.info + .info {
+  margin-left: -3px;
+}
 
-.info-large { height: 96px; }
+.info-large {
+  height: 96px;
+}
 
 .info-top {
   bottom: 0;
@@ -828,10 +837,19 @@ a.feature-icon:hover img {
   transform-origin: 50% 100%;
 }
 
-.info-top .info-bar { bottom: 0; }
-.info-bottom .info-bar { top: 0; transform-origin: 50% 0%; }
-.info-left .info-bar { left: 0; }
-.info-right .info-bar { right: 0; }
+.info-top .info-bar {
+  bottom: 0;
+}
+.info-bottom .info-bar {
+  top: 0;
+  transform-origin: 50% 0%;
+}
+.info-left .info-bar {
+  left: 0;
+}
+.info-right .info-bar {
+  right: 0;
+}
 
 .info .feature-caption {
   opacity: .001;
@@ -911,7 +929,7 @@ a.feature-icon:hover img {
   width: 100%;
   height: 2px;
   margin-top: 7px;
-  background-color: rgba(255,255,255,.2);
+  background-color: rgba(255, 255, 255, .2);
 }
 
 .transform-progress {
@@ -933,11 +951,11 @@ a.feature-icon:hover img {
 
 .sphere path {
   /*opacity: .001;*/
-  fill: rgba(37,36,35,.5);
+  fill: rgba(37, 36, 35, .5);
   /*fill: linear-gradient(-180deg, #FFFFFF 0%, #F6F4F2 35%, #F6F4F2 69%, #DDDAD7 100%);*/
   fill: url(#sphereGradient);
   stroke-width: 1px;
-  stroke: #FF4847;
+  stroke: #ff4847;
   backface-visibility: hidden;
 }
 
@@ -1010,7 +1028,7 @@ a.feature-icon:hover img {
 }
 
 .getting-statred-main-link:hover .getting-started-image {
-  color: #F64E4D;
+  color: #f64e4d;
 }
 
 .getting-statred-main-link:hover,
